# modbus_rpi

./: README.md
communication/: pyproject.toml
communication/communication/: com.py
communication/tests/: test_com.py
modbus_rpi_com/: pyproject.toml
