[tool.poetry]
name = "communication"
version = "0.1.0"
description = ""
authors = ["Eirik Berg  <eblfc97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
pymodbus = "^3.7.3"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
